<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="see">See</string>
    <string name="book">Book</string>
    <string name="make_payment">Make Payment</string>
    <string name="matchs">Matchs</string>
    <string name="profile">Profile</string>
    <string name="welcome_back">Welcome back</string>
    <string name="popular_entities">Popular Entities</string>
    <string name="nearby">Nearby You</string>
    <string name="match_details">Match Details</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment method</string>
    <string name="holder_name">Holder name</string>
    <string name="card_number">Card number</string>
    <string name="expire_date">Expire date (11/23)</string>
    <string name="csv">CSV</string>
    <string name="safe_payment">Safe and Secure Payment</string>
    <string name="age">Age</string>
    <string name="gendre">Gendre</string>
    <string name="match_history">Match History</string>
    <string name="mr">Mr</string>
    <string name="m">M</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="something_goes_wrong_s">Something goes wrong</string>
    <string name="stadium_list">Stadium List</string>
    <string name="seance_list">Seance List</string>


</resources>