<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.explore.ExploreFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/in_top_explore_fragment"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/welcome_back_explore_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/profile_name"
        style="@style/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1" />
    <TextView
        style="@style/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" - " />
    <TextView
        android:id="@+id/profile_location"
        style="@style/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1" />
</LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/titles_explore_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_entities" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_popular_entities"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                style="@style/titles_explore_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/nearby_event_item_recycler" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>